--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "convert-csv-to-json": "^1.3.3",
     "csvtojson": "^2.0.10",
     "file-system": "^2.2.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.2.2"
   }
 }
