--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "convert-csv-to-json": "^1.3.3",
